# incolumepy.palindrome-

./: .editorconfig  main.py  pyproject.toml
src/incolumepy/palindrome/: __init__.py  brute_force.py  whitlists.py
