[tool.poetry]
name = "incolumepy.palindrome"
version = "0.1.0"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]
packages = [
  {include = "incolumepy", from='src'},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
